# core-firmware

./: CMakeLists.txt
inc/: spark_utilities.h  spark_wiring_network.h
src/: CMakeLists.txt  spark_wiring_all.cpp
